Change file structure around to make browsing work from disk.

--- a/src/net/sf/memoranda/ui/resources/userguide/User's guide - Memoranda.html
+++ b/src/net/sf/memoranda/ui/resources/userguide/User's guide - Memoranda.html
@@ -14,98 +14,98 @@
 	<tr>
 		<td width="100%" colspan="2" height="100%" valign="top" class="content">
 <h1><img height="48" alt="" src="./User's guide - Memoranda_files/uguide.gif" width="48" align="absMiddle" border="0"> User's guide (under development)</h1>
-<p>A draft manual can be found <a href="http://memoranda.sourceforge.net/doc/1.0/">here</a>.
+<p>A draft manual can be found <a href="doc/1.0/">here</a>.
 </p><p>The Memoranda User's Guide and Help system <b>is not implemented yet</b>. If you want to make this contribution, please <a href="http://memoranda.sourceforge.net/feedback.html">contact us</a> (see the <a href="http://memoranda.sourceforge.net/development.html">Development page</a>   to know how to contribute).    </p>
       <p>The draft plan of manual:</p>
       <ol>
-        <li> <b>Introduction</b> 
+        <li> <b>Introduction</b>
           <ol>
-            <li> Welcome to Memoranda 
-            </li><li> Brief overview 
+            <li> Welcome to Memoranda
+            </li><li> Brief overview
             </li><li> License and acknowledgments
-            </li><li> Installation and running (requirements and dependencies) 
-            </li><li> Getting help 
+            </li><li> Installation and running (requirements and dependencies)
+            </li><li> Getting help
             </li><li> Provide your feedback </li>
           </ol>
-        </li><li> <b> Basics</b> 
+        </li><li> <b> Basics</b>
           <ol>
-            <li> Window layout 
+            <li> Window layout
             </li><li> Modes and screens
             </li><li> System tray icon
-            </li><li> The Calendar and date navigation 
+            </li><li> The Calendar and date navigation
             </li><li> History of navigation </li>
           </ol>
-        </li><li> <b>Projects</b> 
+        </li><li> <b>Projects</b>
           <ol>
-            <li> Project basics 
-            </li><li> Start a new project 
-            </li><li> Open a project 
-            </li><li> Delete a project 
-            </li><li> Project properties 
-            </li><li> Packing and unpacking a project 
+            <li> Project basics
+            </li><li> Start a new project
+            </li><li> Open a project
+            </li><li> Delete a project
+            </li><li> Project properties
+            </li><li> Packing and unpacking a project
             </li><li> Hiding the non-active projects </li>
           </ol>
-        </li><li> <b>Notes</b> 
+        </li><li> <b>Notes</b>
           <ol>
-            <li> Notes editor... 
+            <li> Notes editor...
               <ol>
-                <li> Editing functions 
-                </li><li> Block text styling 
-                </li><li> Inline text styling 
-                </li><li> Lists 
-                </li><li> Images 
-                </li><li> Tables 
-                </li><li> Hyperlinks 
-                </li><li> Characters 
-                </li><li> Insert special 
-                </li><li> Find &amp; Replace functions 
+                <li> Editing functions
+                </li><li> Block text styling
+                </li><li> Inline text styling
+                </li><li> Lists
+                </li><li> Images
+                </li><li> Tables
+                </li><li> Hyperlinks
+                </li><li> Characters
+                </li><li> Insert special
+                </li><li> Find &amp; Replace functions
                 </li><li> Customize the editor</li>
               </ol>
-            </li><li> Give the note a title 
-            </li><li> Import of HTML files 
-            </li><li> Export of HTML files 
-            </li><li> Navigation panel and bookmarks 
+            </li><li> Give the note a title
+            </li><li> Import of HTML files
+            </li><li> Export of HTML files
+            </li><li> Navigation panel and bookmarks
               <ol>
-                <li> Open a note 
-                </li><li> Clear a note 
-                </li><li> Set a bookmark 
+                <li> Open a note
+                </li><li> Clear a note
+                </li><li> Set a bookmark
                 </li><li> Remove a bookmark </li>
               </ol>
             </li><li> Search a note </li>
           </ol>
-        </li><li> <b>Tasks</b> 
+        </li><li> <b>Tasks</b>
           <ol>
-            <li> Tasks basics 
-            </li><li> Start a new task 
-            </li><li> Set a percent of execution 
-            </li><li> Remove a task 
-            </li><li> Edit the task properties 
+            <li> Tasks basics
+            </li><li> Start a new task
+            </li><li> Set a percent of execution
+            </li><li> Remove a task
+            </li><li> Edit the task properties
             </li><li> Customise the tasks browsing </li>
           </ol>
-        </li><li> <b>Events</b> 
+        </li><li> <b>Events</b>
           <ol>
-            <li> Events basics 
-            </li><li> Set a new event 
-            </li><li> Remove an event 
-            </li><li> Event properties 
+            <li> Events basics
+            </li><li> Set a new event
+            </li><li> Remove an event
+            </li><li> Event properties
             </li><li> Customize the events</li>
           </ol>
         </li><li> <b>Resources</b> </li>
         <ol>
-          <li> Resources basics 
-          </li><li> Add a local resource 
-          </li><li> Resource type dialog... 
+          <li> Resources basics
+          </li><li> Add a local resource
+          </li><li> Resource type dialog...
             <ol>
-              <li> Create a new resource type 
-              </li><li> Edit a resource type 
+              <li> Create a new resource type
+              </li><li> Edit a resource type
               </li><li> Remove a resource type </li>
             </ol>
-          </li><li> Add a www shortcut 
+          </li><li> Add a www shortcut
           </li><li> Set a www-browser application
-          </li><li> Remove a resource 
+          </li><li> Remove a resource
           </li><li> Customize the resources</li>
         </ol>
-        <li> <b>Preferences dialog ...</b> 
+        <li> <b>Preferences dialog ...</b>
         </li><li> <b>Appendix: Localisation</b> </li>
       </ol>
       <p>...</p>
